--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,14 +1,54 @@
-<p>dashboard works!</p>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,800&display=swap"
+        rel="stylesheet">
+</head>
 
-<input type="file" (change)="onFileSelected($event)">
-<button (click)="processCSV()">Procesar CSV</button>
-
-
-    <select (change)="onOptionSelected($event)" >
-        <option *ngFor="let option of state.states" [value]="option">{{ option }}</option>
-    </select>
-  
-    <canvas #myCanvas width="90%" height="100"></canvas>
-    <canvas #myCanvas2 width="100%" height="100"></canvas>
+<input *ngIf="saveinfo" type="file" (change)="onFileSelected($event)">
+<button *ngIf="saveinfo" (click)="processCSV()">Procesar CSV</button>
 
 
+<select class="select__state" (change)="onOptionSelected($event)">
+    <option value=""></option>
+    <option *ngFor="let option of state.states" [value]="option">{{ option }}</option>
+</select>
+
+<div class="container__canvas">
+    <canvas #myCanvas id="myCanvas" height="0"></canvas>
+</div>
+
+<canvas #myCanvas2 width="50%" height="50%"></canvas>
+
+<div class="container__cards">
+    <div class="container__card">
+        <h2>Estado con mas muertes</h2>
+        <hr>
+        <div class="card__image"></div>
+        <p id="card__state" >{{ state.states[indexMaxInfected] }}</p>
+        <hr>
+        <p>Muertes: {{ (state.infected[indexMaxInfected] / 1000).toLocaleString('en-US', { minimumFractionDigits: 3 }) }}</p>
+        <p>Poblacion: {{ (state.poblation[indexMaxInfected] / 1000).toLocaleString('en-US', { minimumFractionDigits: 3 }) }}</p>
+        <p>Porcentaje: {{ state.percentage[indexMaxInfected].toFixed(3) }}%</p>
+    </div>
+    <div class="container__card">
+        <h2>Estado con menos muertes</h2>
+        <hr>
+        <div class="card__image"></div>
+        <p>{{ state.states[indexMinInfected] }}</p>
+        <hr>
+        <p>Muertes: {{ state.infected[indexMinInfected] }}</p>
+        <p>Poblacion: {{ (state.poblation[indexMinInfected] / 1000).toLocaleString('en-US', { minimumFractionDigits: 3 }) }}</p>
+        <p>Porcentaje: {{ state.percentage[indexMinInfected].toFixed(3) }}%</p>
+    </div>
+    <div class="container__card">
+        <h2>Estado mas afectado</h2>
+        <hr>
+        <div class="card__image--affected card__image"></div>
+        <p>{{ state.states[statesAffected] }}</p>
+        <hr>
+        <p>Muertes: {{ (state.infected[statesAffected] / 1000).toLocaleString('en-US', { minimumFractionDigits: 3 }) }}</p>
+        <p>Poblacion: {{ (state.poblation[statesAffected] / 1000).toLocaleString('en-US', { minimumFractionDigits: 3 }) }}</p>
+        <p>Porcentaje: {{ state.percentage[statesAffected].toFixed(3) }}%</p>
+    </div>
+</div>
