feat(login): validaciones del formulario y creacion de servicio para consumo de json server

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
 
 
 <select class="select__state" (change)="onOptionSelected($event)">
-    <option value=""></option>
+    <option value="seleccionar"></option>
     <option *ngFor="let option of state.states" [value]="option">{{ option }}</option>
 </select>
 
