--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,9 +3,19 @@
 }
 
 .container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     background-color: #eef3e89d;
     height: 100vh;
+    width: 100%;
+    max-width: 514px;
+    margin: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+
 }
+
 
 .email__input {
 
@@ -121,9 +131,7 @@ button.load-finished span {
 
 button.load-finished img {
     display: block;
-    /* Convertimos la imagen en un bloque para poder centrarla */
     margin: 0 auto;
-    /* Centramos la imagen horizontalmente */
 }
 
 .imgLoading {
@@ -152,6 +160,53 @@ button.load-finished img {
     margin: 0;
 }
 
-@media screen and (min-width: 768px) {}
+.outside {
+    display: none;
+}
+.img__login--rigth {
+    display: none;
+}
+.btn:disabled {
+    background: #23991f83;
+}
+
+@media screen and (min-width: 768px) {
+    .up {
+        display: none;
+    }
+    .container{
+        height: 400px;
+        width: 400px;
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 255, 0.137);
+        margin: 0;
+        border-radius: 0px 10px 10px 0px;
+    }
+    .global{
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .outside {
+        display: inline-block;
+        width: 514px;
+        height: 900px;
+    }
+
+    .img__login--rigth {
+        display: flex;
+        float: right;
+        height: 400px;
+        width: 400px;
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 255, 0.137);
+        border-radius: 10px 0px 0px 10px;
+    }
+    input{
+        height: 50px;
+    }
+    .btn{
+        height: 50px;
+    }
+}
 
 @media screen and (min-width: 992px) {}
